--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -7,13 +7,21 @@ on:
 
 jobs:
   rust_build:
-    runs-on: ubuntu-latest
+    runs-on: karnot-arc-runner-set
     steps:
       - uses: actions/checkout@v3
 
-      # selecting a toolchain either by action or manual `rustup` calls should happen
-      # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup show
+      - name: Install necessary deps
+        run: |
+          sudo apt update
+          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config curl wget git
+
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
 
       - uses: Swatinem/rust-cache@v2
 
