--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "nightly-2024-05-02"
+channel = "nightly"
 components = ["rustfmt", "clippy"]
 targets = ["wasm32-unknown-unknown"]
