--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -36,8 +36,20 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
+      # - name: Rust Cache
+      #   uses: Swatinem/rust-cache@v2
+
+      - uses: sparebank1utvikling/actions-cache-s3@main
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          aws-s3-bucket: ${{secrets.AWS_S3_BUCKET_NAME}}
+          aws-region: us-east-1
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
