--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -23,7 +23,19 @@ jobs:
           toolchain: stable
           override: true
 
-      - uses: Swatinem/rust-cache@v2
+      # - uses: Swatinem/rust-cache@v2
+
+      - uses: sparebank1utvikling/actions-cache-s3@main
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          aws-s3-bucket: ${{secrets.AWS_S3_BUCKET_NAME}}
+          aws-region: us-east-1
 
       - name: Build the project
         run: |
