--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -49,7 +49,7 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           aws-s3-bucket: ${{secrets.AWS_S3_BUCKET_NAME}}
-          aws-region: us-east-1
+          aws-region: ${{secrets.AWS_REGION}}
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
