removed other wf for testing v2
Signed-off-by: Kratik Jain <kratik1998@gmail.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,12 +21,12 @@ jobs:
     name: Run Cargo linters
     uses: ./.github/workflows/linters-cargo.yml
 
-  coverage:
-    name: Run coverage
-    uses: ./.github/workflows/coverage.yml
-    secrets: inherit
+  # coverage:
+  #   name: Run coverage
+  #   uses: ./.github/workflows/coverage.yml
+  #   secrets: inherit
 
-  e2e-test:
-    name: E2E test
-    uses: ./.github/workflows/e2e-test.yml
-    secrets: inherit
+  # e2e-test:
+  #   name: E2E test
+  #   uses: ./.github/workflows/e2e-test.yml
+  #   secrets: inherit
