--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -24,6 +24,9 @@ jobs:
           override: true
 
       # - uses: Swatinem/rust-cache@v2
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{secrets.AWS_REGION}}
 
       - uses: sparebank1utvikling/actions-cache-s3@main
         with:
