--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -26,7 +26,7 @@ jobs:
       # - uses: Swatinem/rust-cache@v2
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: ${{secrets.AWS_REGION}}
+          aws-region: us-west-1
 
       - uses: sparebank1utvikling/actions-cache-s3@main
         with:
