main branch action for aws creds
Signed-off-by: Kratik Jain <kratik1998@gmail.com>

--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -24,7 +24,7 @@ jobs:
           override: true
 
       # - uses: Swatinem/rust-cache@v2
-      - uses: aws-actions/configure-aws-credentials@v4
+      - uses: aws-actions/configure-aws-credentials@main
         with:
           aws-region: us-west-1
 
