--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -24,9 +24,9 @@ jobs:
           override: true
 
       # - uses: Swatinem/rust-cache@v2
-      - uses: aws-actions/configure-aws-credentials@main
-        with:
-          aws-region: us-west-1
+      # - uses: aws-actions/configure-aws-credentials@main
+      #   with:
+      #     aws-region: us-west-1
 
       - uses: sparebank1utvikling/actions-cache-s3@main
         with:
