--- a/.env.test
+++ b/.env.test
@@ -51,7 +51,7 @@ SHARP_PROOF_LAYOUT="small"
 
 DA_LAYER="ethereum"
 SETTLEMENT_LAYER="ethereum"
-SETTLEMENT_RPC_URL="https://eth-mainnet.public.blastapi.io"
+SETTLEMENT_RPC_URL="https://eth-mainnet.blastapi.io/1747587f-f13e-4f99-b335-dcd7be72e6f0"
 MADARA_RPC_URL="http://localhost:5000"
 L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
 MEMORY_PAGES_CONTRACT_ADDRESS="0x47312450B3Ac8b5b8e247a6bB6d523e7605bDb60"
@@ -61,4 +61,4 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C
 DEFAULT_L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
 TEST_DUMMY_CONTRACT_ADDRESS="0xE5b6F5e695BA6E4aeD92B68c4CC8Df1160D69A81"
 STARKNET_OPERATOR_ADDRESS="0x2C169DFe5fBbA12957Bdd0Ba47d9CEDbFE260CA7"
-ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.public.blastapi.io"
+ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.blastapi.io/1747587f-f13e-4f99-b335-dcd7be72e6f0"
