--- a/.env.test
+++ b/.env.test
@@ -62,3 +62,7 @@ DEFAULT_L1_CORE_CONTRACT_ADDRESS="0xc662c410C0ECf747543f5bA90660f6ABeBD9C8c4"
 TEST_DUMMY_CONTRACT_ADDRESS="0xE5b6F5e695BA6E4aeD92B68c4CC8Df1160D69A81"
 STARKNET_OPERATOR_ADDRESS="0x2C169DFe5fBbA12957Bdd0Ba47d9CEDbFE260CA7"
 ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.blastapi.io/1747587f-f13e-4f99-b335-dcd7be72e6f0"
+
+# OTEL
+OTEL_BSP_MAX_QUEUE_SIZE_DEFAULT=10000
+OTEL_BSP_MAX_EXPORT_BATCH_SIZE_DEFAULT=5000
