--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -72,6 +72,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 opentelemetry = { workspace = true, features = ["metrics", "logs"] }
 opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "logs"] }
+opentelemetry-stdout = { workspace = true }
 opentelemetry-otlp = { workspace = true, features = [
   "tonic",
   "metrics",
