--- a/crates/settlement-clients/starknet/Cargo.toml
+++ b/crates/settlement-clients/starknet/Cargo.toml
@@ -18,6 +18,12 @@ tokio = { workspace = true }
 url = { workspace = true }
 utils = { workspace = true }
 appchain-core-contract-client = { workspace = true }
+tempfile.workspace = true
+anyhow = "1.0.89"
+env_logger = "0.11.5"
+dotenvy.workspace = true
 
 [dev-dependencies]
+async-std = { version = "1.13.0", features = ["attributes"] }
+serde_json.workspace = true
 tokio-test = "*"
