--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,11 @@ MEMORY_PAGES_CONTRACT_ADDRESS=
 PRIVATE_KEY=
 ETHEREUM_PRIVATE_KEY=
 STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
+
+
+
+##### STARKNET SETTLEMENT TEST #####
+STARKNET_PRIVATE_KEY=
+STARKNET_PUBLIC_KEY=
+STARKNET_RPC_URL=
+MADARA_BINARY_PATH=
