--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -56,4 +56,4 @@ jobs:
     - name: Run Starknet tests
       run: |
         cd orchestrator
-        cargo test -p starknet-settlement-client --nocapture
+        cargo test -p starknet-settlement-client -- --nocapture --test-threads=1
