add scarb build for madara

--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -31,6 +31,12 @@ jobs:
         toolchain: stable
         override: true
 
+    - name: Setup Scarb
+      run: |
+        cd madara/cairo
+        uses: asdf-vm/actions/install@v3
+        cd -
+
     - name: Build Madara
       run: |
         cd madara
@@ -40,14 +46,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: madara-alliance/madara-orchestrator  # Replace with your second repository
-        path: orchestrator
+        path: madara-orchestrator
 
 
-
-    - run: 
-        cd crates/settlement-clients/starknet/src/tests/mock_contracts
-    - uses: asdf-vm/actions/install@v3
-    - run:
+    - name: Build Mock Contracts using Scarb
+      run: |
+        cd madara-orchestrator/crates/settlement-clients/starknet/src/tests/mock_contracts
+        uses: asdf-vm/actions/install@v3
         scarb fmt --check
         scarb build 
         cd -
@@ -55,5 +60,5 @@ jobs:
 
     - name: Run Starknet tests
       run: |
-        cd orchestrator
+        cd madara-orchestrator
         cargo test -p starknet-settlement-client -- --nocapture --test-threads=1
