--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -36,9 +36,9 @@ jobs:
         cd madara/cairo
         ls -la
         cat .tool-versions
-        asdf-vm/actions/install@v3
-        asdf install scarb 2.8.2
-        cd -
+
+    - uses: asdf-vm/actions/install@v3
+    - run: cd -
 
     - name: Build Madara
       run: |
