--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -31,17 +31,9 @@ jobs:
         toolchain: stable
         override: true
 
-    - name: Install asdf and dependencies
-      run: |
-        git clone https://github.com/asdf-vm/asdf.git ~/.asdf --branch v0.14.1
-        echo -e '
-        . $HOME/.asdf/asdf.sh' >> ~/.bashrc
-        source ~/.bashrc
-
-    - name: Install Scarb
-      run: |
-        asdf install scarb 2.8.2
-        asdf global scarb 2.8.2
+    - uses: software-mansion/setup-scarb@v1
+      with:
+        scarb-version: "2.8.2"
 
     - name: Build Madara
       run: |
