--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -35,10 +35,10 @@ jobs:
           scarb-version: "2.8.2"
 
       - name: Build Madara
+        working-directory: madara
         run: |
           pwd
-          cd madara
-          pwd
+          cargo build
 
       - name: Checkout Madara Orchestrator
         uses: actions/checkout@v4
@@ -57,6 +57,7 @@ jobs:
         working-directory: madara-orchestrator
         run: |
           pwd
+          cd ../..
           tree -L 3
-          cd madara-orchestrator
+          cd -
           cargo test -p starknet-settlement-client -- --nocapture --test-threads=1
