--- a/.github/workflows/starknet-test.yml
+++ b/.github/workflows/starknet-test.yml
@@ -12,13 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Madara
-        uses: actions/checkout@v4
-        with:
-          repository: madara-alliance/madara # Replace with your first repository
-          ref: main # Replace with your branch name
-          path: madara
-
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -30,11 +23,6 @@ jobs:
         with:
           scarb-version: "2.8.2"
 
-      - name: Build Madara
-        working-directory: madara
-        run: |
-          cargo build
-
       - name: Checkout Madara Orchestrator
         uses: actions/checkout@v4
         with:
@@ -45,6 +33,22 @@ jobs:
           cd crates/settlement-clients/starknet/src/tests/mock_contracts
           scarb fmt --check
           scarb build
+
+      - name: Checkout Madara
+        uses: actions/checkout@v4
+        with:
+          repository: madara-alliance/madara # Replace with your first repository
+          ref: main # Replace with your branch name
+          path: madara
+      
+      - name: Build Madara
+        working-directory: madara
+        run: |
+          cargo build
+          current_path=$(pwd)
+          echo -e "
+          MADARA_BINARY_PATH=\"$current_path\"" >> ../.env.test
+          
 
       - name: Run Starknet tests
         run: |
