--- a/crates/orchestrator/Cargo.toml
+++ b/crates/orchestrator/Cargo.toml
@@ -12,6 +12,7 @@ name = "orchestrator"
 path = "src/main.rs"
 
 [dependencies]
+once_cell = "1.8"
 alloy = { workspace = true }
 assert_matches = "1.5.0"
 async-std = "1.12.0"
@@ -61,11 +62,27 @@ starknet-settlement-client = { workspace = true }
 strum_macros = "0.26.4"
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
+
 url = { workspace = true }
 utils = { workspace = true }
 uuid = { workspace = true, features = ["v4", "serde"] }
+
+#Instrumentation
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+opentelemetry = { workspace = true, features = ["metrics", "logs"] }
+opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "logs"] }
+opentelemetry-stdout = { workspace = true }
+opentelemetry-otlp = { workspace = true, features = [
+  "tonic",
+  "metrics",
+  "logs",
+] }
+opentelemetry-semantic-conventions = { workspace = true }
+opentelemetry-appender-tracing = { workspace = true, default-features = false }
+tracing-core = { workspace = true, default-features = false }
+tracing-opentelemetry = "0.26.0"
+
 
 [features]
 default = ["ethereum", "with_mongodb", "with_sqs"]
