update: correcting otel init

--- a/.env.test
+++ b/.env.test
@@ -65,4 +65,4 @@ ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.public.blastapi.io"
 
 ## Instrumentation
 OTEL_SERVICE_NAME="madara_orchestrator"
-OTEL_COLLECTOR_ENDPOINT="http://localhost:4317"
+OTEL_COLLECTOR_ENDPOINT=""
