--- a/crates/settlement-clients/starknet/Cargo.toml
+++ b/crates/settlement-clients/starknet/Cargo.toml
@@ -22,6 +22,7 @@ tempfile.workspace = true
 tokio = { workspace = true }
 url = { workspace = true }
 utils = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
 async-std = { version = "1.13.0", features = ["attributes"] }
