--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,5 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
 ##### STARKNET SETTLEMENT TEST #####
 STARKNET_PRIVATE_KEY=
-STARKNET_PUBLIC_KEY=
+STARKNET_ACCOUNT_ADDRESS=
 STARKNET_RPC_URL=
-MADARA_BINARY_PATH=
