update: otel_enabled, tracing_level, removed tracing logs

--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -9,3 +9,4 @@ edition.workspace = true
 color-eyre = { workspace = true }
 serde.workspace = true
 thiserror.workspace = true
+tracing = { workspace = true }
