update: added TRACING_LEVEL to env:

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 ##### Instrumentation #####
 OTEL_SERVICE_NAME=
 OTEL_COLLECTOR_ENDPOINT=
+TRACING_LEVEL=
