--- a/.env.test
+++ b/.env.test
@@ -66,3 +66,4 @@ ETHEREUM_BLAST_RPC_URL="https://eth-mainnet.public.blastapi.io"
 ## Instrumentation
 OTEL_SERVICE_NAME="madara_orchestrator"
 OTEL_COLLECTOR_ENDPOINT=""
+TRACING_LEVEL="info"
