--- a/crates/da-clients/ethereum/Cargo.toml
+++ b/crates/da-clients/ethereum/Cargo.toml
@@ -22,7 +22,7 @@ dotenvy.workspace = true
 mockall = { workspace = true }
 reqwest = { workspace = true }
 rstest = { workspace = true }
-serde = { workspace = true, default-features = false, features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 starknet = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
