--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -9,6 +9,7 @@ alloy-primitives = { version = "0.7.7", default-features = false }
 alloy = { workspace = true, features = ["full", "node-bindings"] }
 async-trait = { workspace = true }
 c-kzg = { workspace = true }
+cairo-vm = { workspace = true }
 color-eyre = { workspace = true }
 dotenvy = { workspace = true }
 lazy_static = { workspace = true }
@@ -16,7 +17,7 @@ log.workspace = true
 mockall = { workspace = true }
 reqwest = { workspace = true }
 rstest = { workspace = true }
-serde = { workspace = true, default-features = false, features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 settlement-client-interface = { workspace = true }
 starknet-os = { workspace = true }
 tokio = { workspace = true }
