--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Making proper presets
         run: |
           cd madara/crates/primitives/chain_config/resources/
-          export current_path=$(path)
+          export current_path=$(pwd)
           cd -
           yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + .key + ".json"))' crates/settlement-clients/starknet/src/tests/preset.yml
           yq '.versioned_constants[] |= sub("\.", "_") ' crates/settlement-clients/starknet/src/tests/preset.yml
