--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -82,6 +82,7 @@ jobs:
       - name: Build Madara
         working-directory: madara
         run: |
+          cargo build
           current_path=$(pwd)
           echo -e "
           MADARA_BINARY_PATH=\"$current_path\"" >> ../.env.test
@@ -95,8 +96,7 @@ jobs:
           cd madara/
           export current_path=$(pwd)
           cd -
-          yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + .value))' crates/settlement-clients/starknet/src/tests/preset.yml
-          yq -i '.versioned_constants[] |= sub("\.", "_") ' crates/settlement-clients/starknet/src/tests/preset.yml
+          yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + "/" + .value))' crates/settlement-clients/starknet/src/tests/preset.yml
 
       - name: Run llvm-cov tests
         env:
