--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,7 +30,11 @@ jobs:
 
       # selecting a toolchain either by action or manual `rustup` calls should happen
       # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup show
+      - name: Install necessary deps
+        run: |
+          sudo apt update
+          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config curl wget git
+
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
