--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -41,6 +41,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+          default: true
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
