install more dependencies

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Install necessary dependencies
         run: |
           sudo apt update
-          sudo apt install -y gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
+          sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
+
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
