--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,8 +34,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
-          sudo apt-get install snapd
-          snap install yq
+          sudo apt-get -y install snapd
+          snap install -y yq
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
