--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,7 +35,7 @@ jobs:
           sudo apt update
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
           sudo apt-get -y install snapd
-          snap install -y yq
+          snap install yq
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
