--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -34,11 +34,6 @@ jobs:
         run: |
           sudo apt update
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
-          sudo apt-get -y install snapd
-          sudo systemctl unmask snapd.service
-          sudo systemctl enable snapd.service
-          sudo systemctl start snapd.service
-          snap install yq
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -102,11 +97,10 @@ jobs:
           wget -P ./crates/prover-services/sharp-service/tests/artifacts https://madara-orchestrator-sharp-pie.s3.amazonaws.com/238996-SN.zip
 
       - name: Make preset file
-        run: |
-          cd madara/
-          export current_path=$(pwd)
-          cd -
-          yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + "/" + .value))' crates/settlement-clients/starknet/src/tests/preset.yml
+        working_dir: madara
+        uses: mikefarah/yq@master
+        with:
+          cmd: export current_path=$(pwd) && yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + "/" + .value))' ../crates/settlement-clients/starknet/src/tests/preset.yml
 
       - name: Run llvm-cov tests
         env:
