--- a/crates/prover-services/gps-fact-checker/Cargo.toml
+++ b/crates/prover-services/gps-fact-checker/Cargo.toml
@@ -18,6 +18,7 @@ aws-config = { workspace = true, features = ["behavior-version-latest"] }
 aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
 bincode = { workspace = true }
 cairo-vm.workspace = true
+dotenvy.workspace = true
 itertools.workspace = true
 log.workspace = true
 num-bigint = "0.4.5"
