--- a/crates/settlement-clients/ethereum/Cargo.toml
+++ b/crates/settlement-clients/ethereum/Cargo.toml
@@ -8,6 +8,7 @@ alloy-primitives = { version = "0.7.7", default-features = false }
 
 alloy = { workspace = true, features = ["full", "node-bindings"] }
 async-trait = { workspace = true }
+bytes = "1.7.2"
 c-kzg = { workspace = true }
 cairo-vm = { workspace = true }
 color-eyre = { workspace = true }
