--- a/e2e-tests/Cargo.toml
+++ b/e2e-tests/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 alloy.workspace = true
+alloy-sol-types = "0.8.5"
 async-trait.workspace = true
 aws-config.workspace = true
 aws-sdk-eventbridge.workspace = true
