--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -41,6 +41,27 @@ jobs:
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
 
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Display Python version
+        run: python --version
+
+      - name: Install cairo 0
+        run: |
+          # Creating venv
+          python3.9 -m venv ~/cairo_venv
+          source ~/cairo_venv/bin/activate
+          
+          # Installing deps
+          sudo apt install -y libgmp3-dev
+          pip3 install ecdsa fastecdsa sympy
+          
+          # Installing cairo lang
+          pip3 install cairo-lang
+
       - name: Check Anvil Installation & run Anvil
         run: |
           if command -v anvil &> /dev/null
@@ -52,6 +73,21 @@ jobs:
               echo "Anvil is not installed or not in PATH"
               exit 1
           fi
+
+      - name: Build SNOS files
+        run: |
+          # Downloading all the deps
+          cargo fetch
+          # Navigate to checkouts folder
+          cd /home/runner/.cargo/git/checkouts
+          # Navigating to snos
+          cd snos-*
+          # Navigating to the build
+          cd */
+          # Activating the venv
+          source ~/cairo_venv/bin/activate
+          # Building the cairo lang repo requirements
+          ./scripts/setup-tests.sh
 
       - name: Run e2e test
         env:
