--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,47 +35,47 @@ jobs:
           sudo apt update
           sudo apt-get install -y clang llvm libudev-dev protobuf-compiler gcc g++ build-essential libssl-dev pkg-config curl wget git libclang-dev
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          default: true
+      # - name: Install Rust toolchain
+      #   uses: actions-rs/toolchain@v1
+      #   with:
+      #     profile: minimal
+      #     toolchain: stable
+      #     override: true
+      #     default: true
 
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
+      # - name: Rust Cache
+      #   uses: Swatinem/rust-cache@v2
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
+      # - name: Install Foundry
+      #   uses: foundry-rs/foundry-toolchain@v1
 
-      - name: Check Anvil Installation
-        run: |
-          if command -v anvil &> /dev/null
-          then
-              echo "Anvil is installed. Version information:"
-              anvil --version
-          else
-              echo "Anvil is not installed or not in PATH"
-              exit 1
-          fi
+      # - name: Check Anvil Installation
+      #   run: |
+      #     if command -v anvil &> /dev/null
+      #     then
+      #         echo "Anvil is installed. Version information:"
+      #         anvil --version
+      #     else
+      #         echo "Anvil is not installed or not in PATH"
+      #         exit 1
+      #     fi
 
-      - name: Install cargo-llvm-cov & nextest
-        uses: taiki-e/install-action@cargo-llvm-cov
+      # - name: Install cargo-llvm-cov & nextest
+      #   uses: taiki-e/install-action@cargo-llvm-cov
 
-      - name: Install nextest
-        uses: taiki-e/install-action@nextest
+      # - name: Install nextest
+      #   uses: taiki-e/install-action@nextest
 
-      - name: Setup scarb
-        uses: software-mansion/setup-scarb@v1
-        with:
-          scarb-version: "2.8.2"
+      # - name: Setup scarb
+      #   uses: software-mansion/setup-scarb@v1
+      #   with:
+      #     scarb-version: "2.8.2"
 
-      - name: Build Mock Contracts using Scarb
-        run: |
-          cd crates/settlement-clients/starknet/src/tests/mock_contracts
-          scarb fmt --check
-          scarb build
+      # - name: Build Mock Contracts using Scarb
+      #   run: |
+      #     cd crates/settlement-clients/starknet/src/tests/mock_contracts
+      #     scarb fmt --check
+      #     scarb build
 
       - name: Checkout Madara
         uses: actions/checkout@v4
@@ -87,27 +87,27 @@ jobs:
       - name: Build Madara
         working-directory: madara
         run: |
-          cargo build
-          current_path=$(pwd)
+          # cargo build
           echo -e "
-          MADARA_BINARY_PATH=\"$current_path\"" >> ../.env.test
+          MADARA_BINARY_PATH=\"$(pwd)/target/debug/madara\"" >> ../.env.test
+          cat ../.env.test
 
-      - name: Getting neccesary files for testing
-        run: |
-          wget -P ./crates/prover-services/sharp-service/tests/artifacts https://madara-orchestrator-sharp-pie.s3.amazonaws.com/238996-SN.zip
+      # - name: Getting neccesary files for testing
+      #   run: |
+      #     wget -P ./crates/prover-services/sharp-service/tests/artifacts https://madara-orchestrator-sharp-pie.s3.amazonaws.com/238996-SN.zip
 
-      - name: Make preset file with yq action
-        uses: mikefarah/yq@master
-        with:
-          cmd: cd madara && export current_path=$(pwd) && yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + "/" + .value))' ../crates/settlement-clients/starknet/src/tests/preset.yml
+      # - name: Make preset file with yq action
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: cd madara && export current_path=$(pwd) && yq -i '.versioned_constants |= with_entries(.value = (env(current_path) + "/" + .value))' ../crates/settlement-clients/starknet/src/tests/preset.yml
 
-      - name: Run llvm-cov tests
-        env:
-          ETHEREUM_BLAST_RPC_URL: ${{ secrets.ETHEREUM_BLAST_RPC_URL }}
-        run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
+      # - name: Run llvm-cov tests
+      #   env:
+      #     ETHEREUM_BLAST_RPC_URL: ${{ secrets.ETHEREUM_BLAST_RPC_URL }}
+      #   run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
-        with:
-          files: lcov.info
-          debug: true
+      # - name: Coveralls
+      #   uses: coverallsapp/github-action@v2
+      #   with:
+      #     files: lcov.info
+      #     debug: true
