remove fail fast

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -104,7 +104,7 @@ jobs:
         # run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
         run: |
           cat crates/settlement-clients/starknet/src/tests/preset.yml
-          RUST_LOG=trace cargo test -p starknet-settlement-client -- --test-threads=1 --no-fail-fast
+          RUST_LOG=trace cargo test -p starknet-settlement-client -- --test-threads=1
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
