--- a/crates/settlement-clients/starknet/src/tests/preset.yml
+++ b/crates/settlement-clients/starknet/src/tests/preset.yml
@@ -8,7 +8,7 @@ versioned_constants:
   "0.13.1.1": "./src/tests/resources/versioned_constants_13_1_1.json"
   "0.13.2": "./src/tests/resources/versioned_constants_13_2.json"
 latest_protocol_version: "0.13.2"
-block_time: "1s"
+block_time: "100ms"
 pending_block_update_time: 200ms
 execution_batch_size: 16
 bouncer_config:
