--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -104,7 +104,7 @@ jobs:
 
       - name: Run llvm-cov tests
         env:
-          ETHEREUM_BLAST_RPC_URL: ${{ secrets.ETHEREUM_BLAST_RPC_URL }}
+          SETTLEMENT_RPC_URL: ${{ secrets.ETHEREUM_BLAST_RPC_URL }}
         run: RUST_LOG=debug RUST_BACKTRACE=1 cargo llvm-cov nextest --release --features testing --lcov --output-path lcov.info --test-threads=1 --workspace --exclude=e2e-tests --no-fail-fast
 
       - name: Coveralls
