change env for anvil tests

--- a/.env.test
+++ b/.env.test
@@ -66,3 +66,4 @@ RPC_FOR_SNOS="http://81.16.176.130:9545"
 ##### Tests #####
 
 STARKNET_OPERATOR_ADDRESS="0x2C169DFe5fBbA12957Bdd0Ba47d9CEDbFE260CA7"
+ETHEREUM_MAINNET_RPC=https://eth-mainnet.public.blastapi.io
