--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,6 @@ STARKNET_SOLIDITY_CORE_CONTRACT_ADDRESS=
 
 
 
-##### STARKNET SETTLEMENT TEST #####
+##### STARKNET SETTLEMENT (L3s) #####
 STARKNET_PRIVATE_KEY=
 STARKNET_ACCOUNT_ADDRESS=
