--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,8 +107,8 @@ cairo-vm = { git = "https://github.com/Moonsong-Labs/cairo-vm", branch = "notles
 
 # Snos & Sharp (Starkware)
 # TODO: Update branch to main once the PR is merged (PR #368 in the snos repository)
-starknet-os = { git = "https://github.com/ocdbytes/snos", branch = "main" }
-prove_block = { git = "https://github.com/ocdbytes/snos", branch = "main" }
+starknet-os = { git = "https://github.com/ocdbytes/snos", rev = "71bd0a102735f690c503b8e708773a2db843ef59" }
+prove_block = { git = "https://github.com/ocdbytes/snos", rev = "71bd0a102735f690c503b8e708773a2db843ef59" }
 
 # Madara prover API
 madara-prover-common = { git = "https://github.com/Moonsong-Labs/madara-prover-api", branch = "od/use-latest-cairo-vm" }
