--- a/.github/workflows/setup-snos.yml
+++ b/.github/workflows/setup-snos.yml
@@ -7,6 +7,9 @@ jobs:
   setup-cairo:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
