--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,20 +13,20 @@ jobs:
     name: Run linters
     uses: ./.github/workflows/linters.yml
 
-  rust_build:
-    name: Build Rust project
-    uses: ./.github/workflows/rust-build.yml
+  # rust_build:
+  #   name: Build Rust project
+  #   uses: ./.github/workflows/rust-build.yml
 
-  linters_cargo:
-    name: Run Cargo linters
-    uses: ./.github/workflows/linters-cargo.yml
+  # linters_cargo:
+  #   name: Run Cargo linters
+  #   uses: ./.github/workflows/linters-cargo.yml
 
-  coverage:
-    name: Run coverage
-    uses: ./.github/workflows/coverage.yml
-    secrets: inherit
+  # coverage:
+  #   name: Run coverage
+  #   uses: ./.github/workflows/coverage.yml
+  #   secrets: inherit
 
-  e2e-test:
-    name: E2E test
-    uses: ./.github/workflows/e2e-test.yml
-    secrets: inherit
+  # e2e-test:
+  #   name: E2E test
+  #   uses: ./.github/workflows/e2e-test.yml
+  #   secrets: inherit
